[tool.poetry]
name = "svg-transform"
version = "0.1.0"
description = ""
authors = ["Josef Ondřej <josef.ondrej@tipsport.cz>"]
readme = "README.md"
packages = [{ include = "svg_transform" }]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"
pillow = "^8.3.1"
cairosvg = "^2.5.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
